# cipher_recognition

data_generator/: CMakeLists.txt  Makefile  encrypt.cpp  generate_ciphertexts.cpp  generate_compressed_text.cpp  generate_encrypted_text.cpp  generate_fake_text_ciphertexts.cpp  generate_text.cpp  text_generator.cpp  text_generator.h
generate_fake_video/: generate_fake_video.py
logs/: compress_nist_results.py
python_interface_fast_nist_sts/: python_interface_fast_nist_sts.py  run_all_tests.py  run_all_tests2.py  run_all_tests3.py
